--- a/pdf.css
+++ b/pdf.css
@@ -5,19 +5,19 @@
   -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
   outline: none !important;
 }
-
 body,
-html {
+html{
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   font-family: Arial, sans-serif;
   box-sizing: border-box;
-  overflow-x: hidden;
+  /* overflow: hidden; */
   background-color: rgba(0, 0, 0, 0.966);
   scroll-behavior: smooth;
 }
+
 
 .heading {
   font-family: Roboto Mono, Arial, Helvetica, sans-serif;
@@ -96,9 +96,10 @@ html {
     align-items: center;
     position: relative;
     z-index: 1;
-    background: radial-gradient(circle farthest-corner at 10% 20%, #cf405a 0%, rgb(12, 1, 1) 90%);
+    background: radial-gradient(circle farthest-corner at 10% 20%, #8f3ba8 0%, rgb(0, 0, 0) 90%);
     background-size: cover;
     background-attachment: fixed;
+    overflow: hidden;
   }
   .right-pane {
     margin-bottom: -40px;
@@ -120,15 +121,15 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: #aa6d6d38;
+    background: #aa6d6d05;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: inset 0 0 0 4px #dddddd00,
+    box-shadow: inset 0 0 0 4px #340d4623,
     0 0 4px #eee;
      box-shadow: 0 0 4px #eee;;
     transition: background 0.3s ease-in-out, box-shadow 0.3s;
     width: 83.5%;
-    min-width: 350px;
+    /* min-width: 350px; */
     height: 45vh;
     margin: 42px 0px 0px 60px;
     cursor: pointer;
@@ -139,9 +140,9 @@ html {
 }
 
 .upload-box:hover {
-    background-color: #ffffff2c;
+    background-color: #ead3ff11;
     box-shadow: 0 0 4px #eee,
-    inset 0 0 0 2px #cefae5e1,
+    inset 0 0 0 2px #bf9edd,
     inset 0 0 0 4px #00000000;
 }
 
@@ -150,8 +151,10 @@ html {
 }
 
 .upload-box.dragging {
-    background-color: #396e52;
-    border: 2px dashed #4CAF50;
+    background-color: #ead3ff11;
+    box-shadow: 0 0 4px #eee,
+    inset 0 0 0 2px #bf9edd,
+    inset 0 0 0 4px #00000000;
 }
 
 .convert-section {
@@ -168,7 +171,7 @@ h2 {
 
 #convertButton {
   margin-left: 210px;
-  background-image: linear-gradient(to right, #bd375f 0%, #812d47 50%, #c2406b 100%);
+  background-image: linear-gradient(to right, #6f418d 0%, #43185c 50%, #6f418d 100%);
   font-size: 17px;
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
@@ -201,7 +204,10 @@ h2 {
   overflow-x: auto; 
   overflow-y: hidden; 
   gap: 10px; 
-  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 40px;
+  padding-top: 20px;
   cursor: grab;
   white-space: nowrap; 
   scrollbar-width: auto; 
@@ -219,7 +225,7 @@ h2 {
 }
 
 .image-grid::-webkit-scrollbar-thumb:hover {
-  background: #831c3248; 
+  background: #5a1c8348; 
 }
 
 .image-item {
@@ -228,7 +234,7 @@ h2 {
   height: 90px;
   border-radius: 10px; 
   overflow: hidden; 
-  border: 2px solid #faced7b9; 
+  border: 2px solid #f0cefab9; 
 }
 
 .image-item img {
@@ -236,6 +242,7 @@ h2 {
   height: 100%;
   object-fit: cover;
   display: block;
+  
 } 
 .image-grid::-webkit-scrollbar {
   height: 5px; 
@@ -244,9 +251,9 @@ h2 {
 .form {
   --width-of-input: 200px;
   --border-height: 1px;
-  --border-before-color: rgb(255, 134, 164);
-  --border-after-color: #ff5890e7;
-  --input-hovered-color: #e049761f;
+  --border-before-color: rgb(235, 134, 255);
+  --border-after-color: #900b9ce7;
+  --input-hovered-color: #a949e01f;
   
   position: relative;
   width: var(--width-of-input);
@@ -284,7 +291,7 @@ h2 {
   width: 100%;
  }
  input::placeholder {
-  color: #c9a7ad;
+  color: #f0cefab9;
 }
 .metadata-form {
   margin-left: 65px;
@@ -328,7 +335,7 @@ h2 {
   z-index: 9999; 
 }
 .thank-you-content {
-  background: #3a242d63;
+  background: #32243a63;
   padding: 20px;
   border-radius: 10px;
   text-align: center;
@@ -345,7 +352,7 @@ h2 {
   font-family: Roboto Mono, Arial, Helvetica, sans-serif;
 }
 .action-button {
-  background: linear-gradient(to right, #cb777f, #ff6084);
+  background: linear-gradient(to right, #6f418d, #8845c7);
   color: #fff;
   padding: 9px 20px;
   margin: 10px;
@@ -356,8 +363,8 @@ h2 {
   transition: background 0.3s ease-in-out;
 }
 .action-button1 {
-  background-color:#f9b0bbf5 ;
-  color: #523536;
+  background-color:#f7ecffb9 ;
+  color: #433552;
   padding: 9px 20px;
   margin: 10px;
   border: none;
@@ -368,14 +375,14 @@ h2 {
 }
 
 .action-button:hover {
-  background:  linear-gradient(to right, #c9738d, #dd849f);
+  background:  linear-gradient(to right, #6f418de0, #8845c7e0);
 }
 
 .loading-bar {
   width: 20px;
   height: 10px;
   margin: 0 5px;
-  background-color: #faced7f5;
+  background-color: #bf9edd;
   border-radius: 5px;
   animation: loading-wave-animation 1s ease-in-out infinite;
   box-shadow: 0 0 7px #eee;
@@ -404,9 +411,70 @@ h2 {
     height: 10px;
   }
 }
+.navbar-1 {
+  display: none;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 20px;
+  padding-right: 60px;
+  background: #33333300;
+  color: #fff;
+}
+
+.navbar-1:focus,
+.navbar-1:visited,
+.navbar-1:active {
+  outline: none;
+}
+
+.hamburger-menu {
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+  z-index: 1001;
+}
+
+.hamburger-menu .line {
+  margin-top: -12px;
+  height: 45px;
+  width: 47px;
+  background: #ffffff00;
+  border-radius: 2px;
+
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 60px;
+  right: 20px;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.dropdown-menu a {
+  display: block;
+  padding: 10px 20px;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 1.2rem;
+  transition: background 0.3s;
+}
+
+.dropdown-menu a:hover {
+  background: rgba(255, 255, 255, 0.2);
+  color: #ffffff;
+}
+
 
 @media (max-width: 852px) {
+  
   .main-layout{
+    min-height: 110vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -414,26 +482,190 @@ h2 {
   }
   .upload-box{
     margin-left: 0;
-    max-height: 350px;
-    min-width: 450px;
-    margin-top: 120px;
+    max-height: 450px;
+    min-width: 100px;
+    margin-top: 170px;
   }
-  
+  .right-pane{
+    margin-bottom: 16px;
+    transform: scale(0.9);
+  }
+  .navbar {
+    padding-left: 30px;
+    padding-bottom: 0px;
+  }
+  .heading {
+    padding-bottom: 18px;
+  }
+  .navbar-left {
+    display: contents;
+  }
+
+  .navbar-right {
+    display: none;
+  }
+  .navbar-1 {
+    display: flex;
+  }
+  .hamburger-menu {
+    display: flex;
+  }
+
+  .dropdown-menu {
+    display: none;
+  }
+
+  .dropdown-menu.show {
+    display: block;
+    margin-top: 20px;
+    margin-right: 65px;
+  }
+  .image-grid{
+    gap: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 40px;
+    padding-top: 20px;
+  }
 }
-@media (min-width:750px) and (max-width:850px) {}
-@media (min-width:601px) and (max-width:749px) {}
-@media (min-width:400px) and (max-width:600px) {}
-@media (min-width:350px) and (max-width:399px) {}
-@media (max-width:350px) and (min-width:320px) {}
-@media (max-width:319px) {}
-@media (min-width:1300px) and (min-height:700px) {}
+@media (min-width:600px) and (max-width:750px) {
+  .upload-box{
+    margin-left: 0px;
+    max-height: 400px;
+    min-width: 470px;
+  }
+}
+@media (min-width:500px) and (max-width:600px){
+  .upload-box{
+    margin-top: 150px;
+    margin-left: 0px;
+    max-height: 350px;
+    min-width: 380px;
+  }
+  .right-pane{
+    transform: scale(0.85);
+  }
+}
+@media (min-width:450px) and (max-width:500px) {
+  .upload-box{
+    margin-top: 150px;
+    margin-left: 0px;
+    max-height: 325px;
+    min-width: 325px;
+  }
+  .right-pane{
+    transform: scale(0.77);
+    padding: 0;
+  }
+}
+@media (min-width: 425px) and (max-width:450px) {
+  .upload-box{
+    margin-top: 150px;
+    margin-left: 0px;
+    max-height: 300px;
+    min-width: 250px;
+  }
+  .right-pane{
+    transform: scale(0.755);
+    padding: 0;
+  }
+}
+@media (min-width:400px) and (max-width:425px){
+  .upload-box{
+    margin-top: 150px;
+    margin-left: 0px;
+    max-height: 310px;
+    min-width: 180px;
+    padding: 28px;
+  }
+  .right-pane{
+    transform: scale(0.748);
+    padding: 0;
+  }
+}
+@media (min-width:350px) and (max-width:400px) {
+  .upload-box{
+    margin-top: 140px;
+    margin-left: 12px;
+    max-height: 310px;
+    min-width: 150px;
+    padding: 15px;
+  }
+  .right-pane{
+    margin-top: -40px;
+    transform: scale(0.65);
+    padding: 0;
+    margin-bottom: 0px;
+  }
+  .metadata-form{
+    transform: scale(0.9);
+  }
+}
+@media (max-width:350px) and (min-width:320px) {
+  .upload-box{
+    margin-top: 140px;
+    margin-left: 22px;
+    max-height: 280px;
+    min-width: 120px;
+    padding: 5px;
+  }
+  .right-pane{
+    margin-top: -65px;
+    transform: scale(0.6);
+    padding: 0;
+    margin-bottom: -55px;
+  }
+  .metadata-form{
+    transform: scale(0.95);
+  }
+  .convertlabel{
+    margin-top: 35px;
+  }
+}
+@media (max-width:320px) {
+  .upload-box{
+    margin-top: 150px;
+    margin-left: 40px;
+    max-height: 255px;
+    width: 70%;
+    padding: 5px;
+  }
+  .right-pane{
+    margin-top: -85px;
+    transform: scale(0.5);
+    padding: 0;
+    margin-bottom: -55px;
+  }
+  .metadata-form{
+    transform: scale(0.95);
+  }
+  .convertlabel{
+    margin-top: 35px;
+  }
+  .navbar{
+    padding: 12px 30px;
+  }
+  .heading {
+    padding-bottom: 5px;
+}
+}
+
+@media (min-width:750px) and (max-width:852px) {
+  .upload-box{
+    margin-left: 0px;
+    max-height: 490px;
+    min-width: 540px;
+  }
+  .right-pane{
+    transform: scale(0.9);
+  }
+}
 @media (min-width:980px) and (max-width:1100px) {
   .upload-box{
 
     margin-left: 120px;
     max-height: 350px;
     min-width: 350px;
-    /* margin-top: 120px; */
   }
   .right-pane{
     transform: scale(0.7);
@@ -445,7 +677,6 @@ h2 {
     margin-left: 150px;
     max-height: 350px;
     min-width: 300px;
-    /* margin-top: 120px; */
   }
   .right-pane{
     transform: scale(0.7);
@@ -457,7 +688,6 @@ h2 {
     margin-left: 150px;
     max-height: 350px;
     min-width: 300px;
-    /* margin-top: 120px; */
   }
   .right-pane{
     transform: scale(0.7);
