--- a/pdf.css
+++ b/pdf.css
@@ -90,7 +90,7 @@ html{
     display: flex;
     will-change: transform;
     width: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -306,23 +306,43 @@ h2 {
   margin-bottom: 30px;
   margin-top: 30px;
 }
-.loading-overlay,
-.thank-you-overlay {
-  position: absolute;
+.loading-overlay {
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%; 
-  height: 100%; 
+  height: 100%;
   background: rgba(0, 0, 0, 0.6); 
   backdrop-filter: blur(10px); 
   display: flex; 
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 1000; 
   margin: 0; 
   padding: 0; 
-  box-sizing: border-box; 
   overflow: hidden;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.thank-you-overlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%; 
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); 
+  backdrop-filter: blur(10px); 
+  display: flex; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1001; 
+  margin: 0; 
+  padding: 0; 
+  overflow: hidden;
+  background-attachment: fixed;
+  background-size: cover;
 }
 .hidden {
   display: none;
@@ -332,7 +352,9 @@ h2 {
   justify-content: center;
   align-items: center;
   text-align: center;
-  z-index: 9999; 
+  align-content: center;
+  z-index: 1001; 
+  position: absolute;
 }
 .thank-you-content {
   background: #32243a63;
@@ -341,8 +363,13 @@ h2 {
   text-align: center;
   box-shadow: 0 0 10px #eee;
   max-width: 90%;
-  z-index: 10000; 
+  position: absolute;
+  /* z-index: 9999;
+    */
+  /* position: relative; */
+  /* overflow: hidden; */
 }
+
 .thankyouconvent1  {
   font-weight: 600;
     margin-top: 14px;
@@ -377,7 +404,10 @@ h2 {
 .action-button:hover {
   background:  linear-gradient(to right, #6f418de0, #8845c7e0);
 }
-
+.main-layout.hidden {
+  visibility: visible;
+  opacity: 0.3;
+}
 .loading-bar {
   width: 20px;
   height: 10px;
